<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FragmentedCalculator</string>
    <string name="hello_world">Hello world!</string>
	<string name="button_0">0</string>
	<string name="button_1">1</string>
	<string name="button_2">2</string>
	<string name="button_3">3</string>
	<string name="button_4">4</string>
	<string name="button_5">5</string>
	<string name="button_6">6</string>
	<string name="button_7">7</string>
	<string name="button_8">8</string>
	<string name="button_9">9</string>
	<string name="button_div">:</string>
	<string name="button_mul">*</string>
	<string name="button_add">+</string>
	<string name="button_sub">-</string>
	<string name="button_equals">=</string>
	<string name="button_period">.</string>
	<string name="button_delete">DEL</string>

</resources>
